# e7-appkit-lab

./: .gitignore  LICENSE  README.md  cdefault.yml  e7_tests+HE.cbuild-run.yml  e7_tests+HP.cbuild-run.yml  e7_tests.cbuild-pack.yml  e7_tests.csolution.yml  vcpkg-configuration.json
libs/: fault-handler.clayer.yml  rtt.clayer.yml  stubs.clayer.yml  timing.clayer.yml
libs/alif/: board.clayer.yml
libs/device/: alif-device.clayer.yml
libs/stdlib_stubs/: stdlib_stubs.c  stdlib_stubs.h
libs/timing/: LPRTC.hpp  LPRTC_Registers.hpp  benchmark.cpp  benchmark.hpp  profiling.cpp  profiling.hpp  timing.cpp  timing.hpp
python/: gemm.ipynb  generate_flops.ipynb
results/branch_operations/: branch_operations.csv  branch_operations.ipynb  branch_operations_with_rel.csv  lob_alignment.csv
results/dual_issue/: dual_issue.csv
results/jit/: 4x6_tests.csv  ablation.csv  components_exclude.csv  components_include.csv  gemm_evaluation.ipynb  gemm_growing_k.csv  gemm_growing_k_he.csv  gemm_growing_k_sram0.csv  gemm_growing_m.csv  gemm_growing_m_he.csv  gemm_growing_m_sram0.csv  gemm_growing_n.csv  gemm_growing_n_sram0.csv  gemm_square_all.csv  gemm_square_sram0.csv  gemm_square_test1.csv  gemm_square_test2.csv  k_unroll.csv
results/jit_gemm/: 4x6_tests.csv  ablation.csv  ablation_profiled.xlsx  components_include_additive.csv  components_include_additive_slow.csv  (+24 more)
src/jit_test/tests/: CMakeLists.txt  test_ArithmeticInstructions.cpp  test_Backend.cpp  test_BaseInstructions.cpp  test_DataProcessingInstructions.cpp  test_Instructions.cpp  test_VectorInstructions.cpp
(+129 files in other folders)
